testsuite/gsksl/errors/double-post-decrement.vert
void
main ()
{
  int i;

  i----;
}
